--- a/templates/layout.html
+++ b/templates/layout.html
@@ -19,7 +19,7 @@ $def with (content)
 
 	<!-- twitter card -->
 	<meta name="twitter:card" content="summary_large_image">
-	<meta name="twitter:site" content="@are_no_one">
+	<meta name="twitter:site" content="@AmjadRathod">
 	<meta name="twitter:creator" content="@djohncoleman">
 	<meta name="twitter:title" content="mini tweet bot">
 	<meta name="twitter:description" content="mini tweet bot: twitter automation for shared, public or private twitter accounts">
@@ -49,8 +49,8 @@ $def with (content)
 			<i class="fa fa-wrench" aria-hidden="true"></i>
 			features
 			</li></a>
-			<a href="https://twitter.com/are_no_one" target="_blank"><li>
-			@are_no_one
+			<a href="https://twitter.com/AmjadRathod" target="_blank"><li>
+			@AmjadRathod
 			</li></a>
 			<a href="https://github.com/johncoleman83/mini-tweet-bot" target="_blank"><li>
 				<i class="fa fa-code" aria-hidden="true"></i>
@@ -129,7 +129,7 @@ $def with (content)
 $:content
 	  <aside>
 		  <a class="twitter-timeline" data-link-color="#2B7BB9"
-			 href="https://twitter.com/are_no_one">Tweets by are_no_one</a>
+			 href="https://twitter.com/AmjadRathod">Tweets by AmjadRathod</a>
 		  <script async src="//platform.twitter.com/widgets.js" charset="utf-8"></script>
 	  </aside>
 	</main>
